--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,20 @@ jobs:
         uses: actions/checkout@v2
       - name: Spin up Docker Engine
         run: docker-compose -f docker-compose.test.yml up -d
+      - name: Await Services
+        uses: jakejarvis/wait-action@master
+        with:
+          time: '10s'
       - name: Check Running containers
         run: docker ps -a
       - name: Show Services Logs
         run: docker-compose -f docker-compose.test.yml logs
+      - name: Show current working directory files
+        run: docker-compose exec devsprime-api_api ls
       - name: Run Migrations
         run: docker-compose exec devsprime-api_api python manage.py migrate
+      - name: Show Migrations Logs
+        run: docker-compose -f docker-compose.test.yml logs
       - name: Run Tests
         run: docker-compose exec devsprime-api_api python manage test --noinput
       - name: Shutdown Services
