--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,13 +1,13 @@
 version: '3.7'
 
 x-db-envs: &db-envs
-  POSTGRES_DB: cinchdb
+  POSTGRES_DB: devsprimedb
   POSTGRES_PASSWORD: password
   POSTGRES_USER: postgres
 
 x-api-vars: &api-vars
   ALLOWED_HOSTS: 127.0.0.1,localhost
-  DATABASE_URL: postgres://postgres:password@db:5432/cinchdb
+  DATABASE_URL: postgres://postgres:password@db:5432/devsprimedb
   DEBUG: 0
   PORT: 18000
   
