Learner card details (#33)
* updated settings.py for workflow db support

* updated settings.py for workflow db support

* refactored codes for payment card details

* refactored codes for card details implimentation

* refactored code for paystack integration

* refactored code for paystack integration

* added bank code fetcher

* Update card_validator.py

* Update test_card.py

* Update test_card.py

* Update test_card.py

* Update urls.py

* Update urls.py

* Update urls.py

* bg fixed url.py errors

* bg fixed authorization bug on learners-card view

* ft added validations and delete method for learner's card

* ft added validations and delete method for learners card

* Update requirements.txt

* Update payment_card_views.py

* refactored codes for learner card

* Update test_card.py

Co-authored-by: Decagon <decagon@Decagons-MacBook-Air.local>
Co-authored-by: Adenike Awofeso <41590285+nikkifeso@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,15 @@
 tmp/
 .idea/
 .env
-
-
+db.sqlite3
 # [Python]
 *.pyc
 venv/
 __pycache__/
-
+.env
 # [Project]
 project/staticfiles
 project/db/migrations/
-
+project/api/migrations/
+api/migrations/
+migrations
