--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.4
 certifi==2020.12.5
 chardet==4.0.0
+cloudinary==1.25.0
 coreapi==2.3.3
 coreschema==0.0.4
 dj-database-url==0.5.0
@@ -22,6 +23,7 @@ requests==2.25.1
 ruamel.yaml==0.17.7
 ruamel.yaml.clib==0.2.2
 simplejson==3.17.2
+six==1.16.0
 sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.5
