--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 dj-database-url==0.5.0
 Django==3.2.3
+django-cors-headers==3.7.0
 djangorestframework==3.12.4
 drf-yasg==1.20.0
 gunicorn==20.1.0
